--- a/Starter Template/styles/room.css
+++ b/Starter Template/styles/room.css
@@ -68,7 +68,7 @@
   background-color: #2aca3e;
 }
 
-.member_name{
+.member_name {
   font-size: 14px;
   line-height: 0;
 }
@@ -113,23 +113,20 @@
   color: #ede0e0;
 }
 
-.message__body__bot{
+.message__body__bot {
   padding: 0 20px;
   max-width: 900px;
   color: #bdbdbd;
 }
 
-
 .message__author {
   margin-right: 10px;
-  color: #2aca3e!important;
-
+  color: #2aca3e !important;
 }
 
 .message__author__bot {
   margin-right: 10px;
-  color: #a52aca!important;
-
+  color: #a52aca !important;
 }
 
 .message__text {
@@ -174,7 +171,48 @@
   height: 100%;
 }
 
+#stream__box {
+  background-color: #3f434a;
+  height: 60vh;
+  display: none;
+}
+#streams__container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2em;
+  justify-content: center;
+  align-items: center;
+  margin-top: 25px;
+  margin-bottom: 425px;
+}
+.video__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #b366f9;
+  border-radius: 5px; /* do 50 px here for square  videos */
+  cursor: pointer;
+  overflow: hidden;
+  height: 300px;
+  width: 400px;
+}
 
+.video-player{
+  height: 100%;
+  width: 100%;
+  background-color: red;
+  
+}
+.video-player video{
+  background-color: red;
+  border-radius:5px;
+}
+@media (max-width: 1400px) {
+  .video__container {
+    height: 200px;
+    width: 200px;
+  }
+}
 @media (max-width: 1200px) {
   #members__container {
     display: none;
@@ -207,6 +245,11 @@
 @media (max-width: 768px) {
   #stream__container {
     width: 100%;
+  }
+
+  .video__container {
+    height: 100px;
+    width: 100px;
   }
 
   #messages__container {
